# Sqush

./: .gitignore  LICENSE  PROGRESS.md  README.md  TODO.md  bench.py  config.yaml  mkdocs.yml  pyproject.toml  run.sh  test_quantstar.sh  test_quenstar.sh
.github/workflows/: docs.yml
docs/: index.md
docs/concepts/: baking.md  session-kv-reuse.md  vram-tiers.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/internals/: architecture.md  attention.md  cli.md  inference-engine.md  kv-cache.md  quantization.md  server.md
docs/reference/: api.md  benchmarks.md  commands.md
quantstar/: __main__.py  cli.py  config.py  download.py  engine.py  quantize.py  server.py
quenstar/: __main__.py  cli.py  config.py  download.py  engine.py  kvstore.py  quantize.py  server.py  session.py  toolcall.py  types.py
sqush/: __main__.py  config.py  download.py  engine.py  quantize.py  server.py
tests/: conftest.py  test_attention.py  test_bake_device_map.py  test_bake_dispatch.py  test_bake_safetensors.py  test_cli.py  test_config.py  test_download.py  test_engine.py  test_kv_cache.py  test_load_time_patches.py  test_main.py  test_quantize_embedding.py  test_quantize_embeddings.py  test_quantize_visual_encoder.py  test_server.py  test_server_stream.py  test_smoke.py  test_tool_syntax.py  test_toolcall.py  test_unit.py
