[project]
name = "quenstar"
version = "0.1.0"
description = "Local LLM inference server with DS4-style disk KV cache. Maximizes VRAM for model weights by offloading context to system RAM."
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python==0.3.23",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "sse-starlette==3.4.4",
    "pyyaml==6.0.3",
    "cmake==4.3.2",
    "huggingface_hub==1.17.0",
]

[project.optional-dependencies]
cuda = ["llama-cpp-python[cuda]>=0.3.0"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["quenstar*"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that need a GPU and a downloaded model",
]
testpaths = ["tests"]
timeout = 300
