[project]
name = "quenstar"
version = "2.0.0"
description = "Qwen3.6-27B quantized inference server — 3-bit weights, flash attention, 4-bit KV cache, all in 24GB VRAM"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.52.0",
    "accelerate>=1.0.0",
    "torchao>=0.8.0",
    "flash-attn>=2.7.0",
    "huggingface_hub>=0.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=3.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
cuda = ["torch", "flash-attn"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
