[project]
name = "quantstar"
version = "2.0.0"
description = "Qwen3.6-27B quantized inference server — 4-bit NF4 weights, 4-bit KV cache, all in 24 GB VRAM"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=5.0.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.45.0",
    "huggingface_hub>=0.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=3.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
kv-cache = ["quanto>=0.2.0"]
test = ["pytest>=9.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
